# platformer

./: .gitmodules  CMakeLists.txt  ideas.md  make.bat  readme.md  toolchain.cmake
inc/: camera.h  character.h  character_animation.h  enemy.h  glb_loader.h  input.h  logging.h  model.h  pch.h  png_decoder.h  shader.h  shader_compiler.h  sprite.h  texture.h  texture_loader.h  world.h
src/: camera.c  character.c  character_animation.c  enemy.c  glb_loader.c  input.c  input.h  logging.c  logging.h  main.c  model.c  png_decoder.c  projectile.c  projectile.h  shader.c  shader_compiler.c  sprite.c  sprite_render_grounded  stb_image_impl.c  test_includes.c  texture.c  texture_loader.c  utils.c  world.c
